tests/examples/good/garbage_collector/good037.lat
int main() {
    A a = new A;
   // A a2 = a;
    a = a;
    a = a;

    
    return 0;
}

A newA() {return new A;}

class A {
    int a;
    int b;
    int c;
}