tests/examples/bad/class_self_keyword_override_02.lat
int main() {
    return 0;
}
 
class A {
    int a;
    int self() {return 0;}
}

